Fix info bar on mobile and material UI js init.

--- a/client/modules/core/components/common/navigation/info-bar/info-bar.css
+++ b/client/modules/core/components/common/navigation/info-bar/info-bar.css
@@ -1,6 +1,13 @@
 #info-bar {
-  margin-top: 60px;
+  margin-top: 50px;
   z-index: 1029;
+}
+
+@media (min-width: 768px) {
+  #info-bar {
+    margin-top: 60px;
+    height: 60px;
+  }
 }
 
 #info-bar li {
